--- a/styles_siv.css
+++ b/styles_siv.css
@@ -83,7 +83,7 @@ body {
 .stop-selection label {
     margin: 0;
     white-space: nowrap;
-    font-size: 12.5px;
+    font-size: 12px;
 }
 
 #stop-select {
@@ -93,7 +93,7 @@ body {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-family: 'Unageo', sans-serif;
-    font-size: 12.5px;
+    font-size: 12px;
 }
 
 #validate-button {
@@ -106,7 +106,7 @@ body {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
-    font-size: 12.5px;
+    font-size: 12px;
 }
 
 #validate-button:hover {
@@ -141,7 +141,7 @@ body {
     font-family: 'Unageo', sans-serif;
     text-align: center;
     flex-grow: 1;
-    font-size: 23px; 
+    font-size: 24px;
     color: white;
 }
 
@@ -157,7 +157,7 @@ body {
 #departure-labels {
     margin-bottom: 10px;
     color: black;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 600;
     font-family: 'Unageo', sans-serif;
 }
@@ -177,7 +177,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 5px 0;
-    font-size: 18px;
+    font-size: 17px;
     margin: 1px 0;
     border-radius: 5px;
     width: 100%;
@@ -211,14 +211,14 @@ body {
     font-family: 'Unageo', sans-serif;
     flex-grow: 1;
     text-align: center;
-    font-weight: bold;
+    font-weight: 800;
     font-size: 18px;
 }
 
 .departure-wait-time {
     font-family: 'Unageo', sans-serif;
     margin: 0 10px;
-    font-weight: bold;
+    font-weight: 800;
     font-size: 18px;
 }
 
@@ -245,7 +245,7 @@ body {
     color: black;
     padding: 10px;
     border-radius: 5px;
-    font-size: 13px;
+    font-size: 12.5px;
     font-family: 'Unageo', sans-serif;
     text-align: left;
     height: 100px;
@@ -321,7 +321,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: bold;
     padding: 20px;
     border-radius: 5px;
@@ -378,7 +378,7 @@ body {
     }
 
     #traffic-info-details {
-        font-size: 13px; 
+        font-size: 12.5px;
         height: 150px;
     }
 
