--- a/styles_siv.css
+++ b/styles_siv.css
@@ -182,7 +182,7 @@ body {
     border-radius: 5px;
     width: 100%;
     box-sizing: border-box;
-    height: 50px; /* Hauteur fixe de 50px en version classique */
+    height: 50px; /* Hauteur fixe de 50px */
 }
 
 .departure-item:nth-child(even) {
@@ -246,15 +246,15 @@ body {
     color: black;
     padding: 10px;
     border-radius: 5px;
-    font-size: 12px;
+    font-size: 12.5px;
     font-family: 'Unageo', sans-serif;
     text-align: left;
-    height: 80px;
+    height: 100px; /* Taille fixe de 100px */
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-bottom: 5px;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 #traffic-info-details p {
@@ -336,80 +336,4 @@ body {
 
 .suspension-message p {
     margin: 5px 0;
-}
-
-@media (max-width: 768px) {
-    .info-display {
-        padding: 10px;
-        max-width: 100%;
-    }
-
-    .stop-header {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    #stop-name-time {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    #selected-stop {
-        font-size: 18px;
-        margin-right: 10px;
-    }
-
-    #current-time {
-        font-size: 14px;
-    }
-
-    #departure-labels {
-        font-size: 12px;
-    }
-
-    .departure-item {
-        font-size: 14px;
-        padding: 6px 0;
-        height: auto; /* Hauteur automatique sur mobile */
-        min-height: 40px; /* Hauteur minimale sur mobile */
-    }
-
-    .line-box {
-        width: 35px;
-        height: 35px;
-        font-size: 18px;
-        margin: 0 8px;
-    }
-
-    .departure-destination {
-        font-size: 14px;
-    }
-
-    .departure-wait-time {
-        font-size: 14px;
-    }
-
-    #traffic-info-header {
-        font-size: 12px;
-    }
-
-    #traffic-info-details {
-        font-size: 11px;
-        height: 60px;
-    }
-
-    #traffic-info-details p {
-        margin: 1px 0;
-    }
-
-    #suspension-container {
-        width: 100%;
-        height: 300px;
-    }
-
-    .suspension-message {
-        font-size: 14px;
-    }
 }
